Fix header z-index

--- a/styles/main.css
+++ b/styles/main.css
@@ -125,6 +125,7 @@ header {
     top: 0;
     background-color: var(--background-nav-color);
     backdrop-filter: blur(4px);
+    z-index: 10;
 }
 
 header h2 {
